# custom-beets-plugins

./: README.md  main.py  mise.toml  pyproject.toml
beetsplug/sourcemetadata/: sourcemetadata.py
beetsplug/symlinkonmove/: symlinkonmove.py
